fixing layout issues

--- a/style.css
+++ b/style.css
@@ -15,9 +15,8 @@ body {
 	background-image: url('./images/pattern-bg.svg'),
 		url('./images//pattern-curve.svg'), url('./images//pattern-quotes.svg');
 	background-repeat: no-repeat;
-	/* background-size: 91%, 73%, 14%; */
-	background-size: 330px, 278px, 65px;
-	background-position: 36% 7%, 1% 100%, 51% 61%;
+	background-size: 472px, 278px, 65px;
+	background-position: 49% 32%, 1% 100%, 48% 70%;
 	background-color: #fff;
 	font-family: 'Inter', sans-serif;
 	font-size: var(--mobile-font-size);
@@ -29,9 +28,7 @@ body {
 }
 
 img {
-	width: 254px;
-	height: 252px;
-	object-fit: cover;
+	max-width: 100%;
 }
 
 .carousel {
@@ -40,13 +37,12 @@ img {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	position: relative;
 }
 
 .image-container {
 	display: flex;
 	justify-content: space-between;
-	width: 306px;
+	position: relative;
 }
 
 .image-div {
@@ -57,10 +53,6 @@ img {
 .img {
 	margin-bottom: 68px;
 	border-radius: 8px;
-}
-
-.card-body {
-	width: 306px;
 }
 
 .card-text {
@@ -83,7 +75,8 @@ p.text-muted {
 	display: flex;
 	justify-content: space-between;
 	position: absolute;
-	top: 297px;
+	bottom: 250px;
+	right: 159px;
 }
 
 .btn {
@@ -109,74 +102,104 @@ p.text-muted {
 
 @media screen and (min-width: 1000px) {
 	body {
-		background-size: 703px, 367px, 109px;
-		background-position: 95% 105%, 0% 100%, 21% 21%;
+		background-size: 529px, 278px, 65px;		
+		background-position: 90% 49%, 0% 100%, 20% 33%;
 	}
 	.carousel {
 		flex-direction: row;
 		justify-content: center;
-		width: 1000px;
-		height: 800px;
+		width: 83%;
 	}
 
 	.image-container {
-		width: 1109px;
 		justify-content: center;
 	}
 
 	.img {
-		grid-area: image;
-		width: 536px;
-		height: 537px;
+		grid-column: 2/4;
+    grid-row: 1;
 		margin-bottom: 0;
-	}
-
-	.card-body {
-		grid-area: card-body;
-		width: 625px;
-		height: 278px;
-		align-self: center;
-		display: grid;
-		grid-template-columns: 25% 75%;
-		grid-template-areas:
-			'para para'
-			'name job-title';
 	}
 
 	.image-div {
 		text-align: left;
 		display: grid;
-		grid-template-columns: 2fr 1fr;
-		grid-template-areas: 'card-body image';
-		width: 100%;
-		height: 537px;
+		grid-template-columns: 52% 8% 40%;
 		padding-top: 0;
 	}
 
+	.card-body {
+		padding-top: 130px;
+		grid-column: 1/3;
+    grid-row: 1;
+	}
+
 	.card-text {
-		grid-area: para;
-		font-size: 35px;
+		font-size: 2rem;
 		margin-top: 0;
-		margin-bottom: 48px;
+		margin-bottom: 39px;
 	}
 
 	h5.card-title {
-		grid-area: name;
 		font-size: 22px;
+		display: inline-block;
+		margin-right: 0.5rem;
 	}
 
 	p.text-muted {
-		grid-area: job-title;
 		font-size: 22px;
+		display: inline-block;
 	}
 
 	.buttons-container {
-		top: 650px;
-		left: 650px;
+		bottom: 69px;
+    right: 33%;
 	}
 }
 
 /* last so it overrides all other display properties */
 .displayNone {
 	display: none;
+}
+
+@media screen and (min-width: 1020px) {
+		.buttons-container {
+			bottom: 63px;
+	}
+}
+
+@media screen and (min-width: 1025px) {
+	.buttons-container {
+		bottom: 23px;
+	}
+}
+
+@media screen and (min-width: 1080px) {
+	.buttons-container {
+		bottom: 2px;
+	}
+}
+
+@media screen and (min-width: 1100px) {
+	.buttons-container {
+		bottom: -21px;
+	}
+}
+
+@media screen and (min-width: 1350px){
+	body {
+		background-size: 703px, 367px, 109px;
+	}
+}
+
+@media screen and (min-width: 1500px) {
+	.buttons-container {
+		right: 35%;
+	}
+}
+
+@media screen and (min-width: 1600px) {
+	body {
+		background-position: 82% 49%, 0% 100%, 20% 33%;
+	}
 }
